--- a/Data-analysis/NeSI-data-analysis.Rmd
+++ b/Data-analysis/NeSI-data-analysis.Rmd
@@ -33,23 +33,33 @@ library(ggplot2) #calls ggplot2 which should be installed
 library(plyr) #need it for counts
 library(reshape2) #need it for plotting
 
-knitr::opts_chunk$set(fig.width=12, fig.height=8) 
+knitr::opts_chunk$set(fig.width=12, fig.height=8) # control figure size in output
 ```
 
 ## Worforce number in NZ 
 
-Estimate number or total researchers in each Higher Ed institution, by using the fraction of total funded EP portfolios in 2012 PBRF round, and estimating FTE number and headcount number from the total values provided by stats.nz 2016 R&d survey. According to TEC there are 9 universities and a number of other HED institutions that contribute to the PBRF 2012. All these other HED institutions are grouped into one as "all other"
+Estimate number or total researchers in each Higher Ed institution, by using the fraction of total funded EP portfolios in 2012 PBRF round, and estimating FTE number and headcount number from the total values provided by stats.nz 2016 R&d survey. According to TEC there are 9 universities and a number of other HED institutions that contribute to the PBRF 2012. All these other HED institutions are grouped into one as "all other". 
+
+Estimate number of total tech in Higher Ed by institution by using same approach as above. 
+
+Estimate number of total tech in CRI by distributin tech number in gov (from R&D 2016 survey) and distributing proportionately based on total number of staff in each CRI.
 
 
 ```{r researchers, echo=FALSE, eval = TRUE}
 
-setwd("~/Desktop/GitHub/nesi-training/Data-analysis")
-
 #read from rd-2016.csv total eft and number of researchers (exculde student researcher)
 hed.researcher.number <- as.numeric(rdsurvey2016$hed.number.2016[rdsurvey2016$role == "researcher"])
 hed.researcher.fte <-as.numeric(rdsurvey2016$hed.fte.2016[rdsurvey2016$role == "researcher"])
+hed.student.fte<-as.numeric(rdsurvey2016$hed.fte.2016[rdsurvey2016$role == "student.researcher"])
+hed.student.number <- as.numeric(rdsurvey2016$hed.number.2016[rdsurvey2016$role == "researcher"])
+hed.tech.number<-as.numeric(rdsurvey2016$hed.number.2016[rdsurvey2016$role == "technician"])
+hed.tech.fte<-as.numeric(rdsurvey2016$hed.number.2016[rdsurvey2016$role == "technician"])
+gov.tech.number<-as.numeric(rdsurvey2016$gov.number.2016[rdsurvey2016$role == "technician"])
+gov.tech.fte<-as.numeric(rdsurvey2016$gov.fte.2016[rdsurvey2016$role == "technician"])
+gov.res.number <- as.numeric(rdsurvey2016$gov.number.2016[rdsurvey2016$role == "researcher"])
 
-total.eps <-sum(reshed$funded.ep) #total number of funded eps  (should be 6311.41)
+#total number of funded eps  (should be 6311.41)
+total.eps <-sum(reshed$funded.ep) 
 
 #split Universities from other tertiary institutions, then add other tertiary as a single line
 resheduni = subset(reshed, reshed$inst.category == "heduni")
@@ -65,18 +75,23 @@ reshedall$institution[nrow(reshedall)]<-"allother"
 reshedall$inst.category[nrow(reshedall)]<-"hedother"
 reshedall$funded.ep[reshedall$institution=="allother"] <-sum(reshedother$funded.ep)
 
-#calculate total researchers number per institution from funded eviedence porfolio numbers
+#calculate total researchers  per institution from funded eviedence porfolio numbers
 
 reshedall$percent.funded.ep <- reshedall$funded.ep * 100 /total.eps
 reshedall$res.staff.number <- reshedall$percent.funded.ep * hed.researcher.number  /100
 reshedall$res.staff.fte <- reshedall$percent.funded.ep * hed.researcher.fte /100
 
-#caclulate total researchers FTEs per discipline from funded eviedence porfolio numbers
+#caclulate total researchers per discipline from funded eviedence porfolio numbers
+
 resdiscipline$percent.funded.ep <- resdiscipline$funded.ep * 100 /total.eps
 resdiscipline$res.staff.number <- resdiscipline$percent.funded.ep * hed.researcher.number  /100
 resdiscipline$res.staff.fte <- resdiscipline$percent.funded.ep * hed.researcher.fte /100
 
-cat("Total number of resarchers at universities: ", hed.researcher.number, "(from R&D 2016 survey)")
+#calculate total tech per institution from funded evidence portfolio numbers
+
+reshedall$tech.number <- as.numeric(reshedall$percent.funded.ep * hed.tech.number /100)
+reshedall$tech.fte <- reshedall$percent.funded.ep * hed.tech.fte /100
+
 
 ```
 
@@ -141,17 +156,20 @@ ggplot(criperyear,aes(x = institution,y = value)) +
 
 #NeSI users by discipline
 
+#Replace NA with 0
+resdiscipline[is.na(resdiscipline)] <- 0
+
 discipline.nesi.users = sum(resdiscipline$nesi.users) 
-discipline.res.number = sum(resdiscipline$res.staff.number) #should match hed.researcher.number
+discipline.res.number = sum(resdiscipline$res.staff.number) + sum(resdiscipline$student.number) + sum(resdiscipline$tech.number)
 
 #total research workforce (per rd 2016) - No info about discipline
+#Need to recalculate this .....
 
-res.gov.2016 = rdsurvey2016$gov.number.2016[rdsurvey2016$role == "total"]
-res.hed.2016 = rdsurvey2016$hed.number.2016[rdsurvey2016$role == "total"]
+res.gov.2016 = gov.res.number + gov.tech.number
+res.hed.2016 = hed.researcher.number + hed.student.number + hed.tech.number
 hed.gov.2016 = res.gov.2016 + res.hed.2016 #HED + Government total users
 
 percent.nesi.users.gov.hed = discipline.nesi.users * 100 / hed.gov.2016
-discipline.nesi.users = sum(resdiscipline$nesi.users) 
 percentage.nesi.users = discipline.nesi.users *100 /discipline.res.number
 resdiscipline$nesi.percentage = resdiscipline$nesi.users * 100 / resdiscipline$res.staff.number
 
